# VTAE

./: .coverage  .gitignore  CHANGELOG.md  README.md  README_v0.5.4.md  README_v0.5.5.md  README_v0.5.7.md  README_v0_5_9.md  config_notificacoes.yaml  env.example  instalar.bat  pyproject.toml  requirements.txt  vtae.bat  vtae.ps1
configs/msi3/: login_config.py
configs/si3/: cadastro_paciente_config_si3.py  paciente_config.py
configs/sislab/: cadastro_funcionario_config.py  config.yaml  dt1_sislab_env_example.txt
docs/: MIGRACAO_E2D.md  README.md  Roadmap_VTAE_Observabilidade_v057.docx  VTAE_Documentacao.docx  VTAE_Documentacao_Tecnica.docx  VTAE_Manual.docx  VTAE_Manual_Criacao_Testes.docx  VTAE_Manualv3.docx  VTAE_Roadmap_Checklist_v0_5_20.docx  criar_teste_novo.md  modelo.py  mudar_cenário_provedor.md  pedencias.md  temp.md  ~$AE_Manualv3.docx
scripts/: diagnostico_jab_v2.py  diagnostico_jab_v3.py  diagnostico_jab_v4.py  posicao_mouse.py  testar_regiao_ocr.py
src/cli/: run.py  send.py  summary.py
src/config/: __init__.py  loader.py  schema.py
src/core/: context.py  dsl_interpreter.py  estado_jornada.py  health_check.py  metrics.py  observer.py  report_generator.py  result.py  summary_generator.py  types.py
src/flows/: base_flow.py
src/runners/: base_runner.py  browser_launcher.py  opencv_runner.py  playwright_runner.py
src/vision/: ocr.py  ocr_engine.py  template.py
tests/: conftest.py
tests/unit/: conftest.py  test_admissao_flow.py  test_cadastro_paciente_flow.py  (+8 more)
vtae.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+135 files in other folders)
